# Dissertation

./: .gitmodules  README.md
media/: Q&A_Presentation.pptx
ros2_ws/results/: generate_summary_files.py
ros2_ws/results/GrGSL/: House01_1,3-2,4_fast.csv  House01_1,3-2,4_slow.csv  House01_2,4-1_fast.csv  House01_2,4-1_slow.csv  House02_3,5-1_fast.csv  House02_3,5-1_slow.csv  House02_4,5-3_fast.csv  House02_4,5-3_slow.csv  House03_1-2,5_fast.csv  House03_1-2,5_slow.csv  House03_5-3_fast.csv  House03_5-3_slow.csv  House04_5,7-1,2_fast.csv  House04_5,7-1,2_slow.csv  House04_7-3,8_fast.csv  House04_7-3,8_slow.csv  House05_4,8-5_fast.csv  House05_4,8-5_slow.csv  House05_7-1,2_fast.csv  House05_7-1,2_slow.csv  House06_1,2-5_fast.csv  House06_1,2-5_slow.csv  House06_1-4,5_fast.csv  House06_1-4,5_slow.csv  House07_1,3-5_fast.csv  House07_1,3-5_slow.csv  House07_6-1_fast.csv  House07_6-1_slow.csv  House08_1,3-7_fast.csv  House08_1,3-7_slow.csv  House08_8,7-6_fast.csv  House08_8,7-6_slow.csv  House09_6-2,5_fast.csv  House09_6-2,5_slow.csv  House09_6-7,3_fast.csv  House09_6-7,3_slow.csv  House10_1-3,2_fast.csv  House10_1-3,2_slow.csv  House10_2,3-1_fast.csv  House10_2,3-1_slow.csv  (+40 more)
ros2_ws/results/PMFS/: House01_1,3-2,4_fast.csv  House01_1,3-2,4_slow.csv  House01_2,4-1_fast.csv  House01_2,4-1_slow.csv  House02_3,5-1_fast.csv  House02_3,5-1_slow.csv  House02_4,5-3_fast.csv  House02_4,5-3_slow.csv  (+72 more)
ros2_ws/src/kdm_vw/: package.xml  setup.cfg  setup.py
ros2_ws/src/kdm_vw/kdm_vw/: coverage_explorer_node.py  csv_to_heatmap.py  export_ground_truth_map.py
ros2_ws/src/kdm_vw/kdm_vw/gdm/: __init__.py
ros2_ws/src/kdm_vw/kdm_vw/gdm/common/: __init__.py  gdm.py  lattice.py  map.py  observation.py
ros2_ws/src/kdm_vw/kdm_vw/gdm/kdm/: __init__.py  kdm_vw.py
ros2_ws/src/kdm_vw/launch/: explorer.rviz  kdm_vw.rviz
ros2_ws/src/kdm_vw/resource/: kdm_vw
(+155 files in other folders)
