<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kdm_vw</name>
  <version>0.0.0</version>
  <description>Standalone VGR dataset wrapper for KDM+V/W gas distribution mapping with the required GDM code.</description>
  <maintainer email="aa2212@hw.ac.uk">Aadham Ahmad</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>gaden_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>olfaction_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>basic_sim</exec_depend>
  <exec_depend>simulated_gas_sensor</exec_depend>
  <exec_depend>simulated_anemometer</exec_depend>
  <exec_depend>gaden_common</exec_depend>
  <exec_depend>gaden_environment</exec_depend>
  <exec_depend>gaden_player</exec_depend>
  <exec_depend>vgr_dataset</exec_depend>
  <exec_depend>pmfs_env</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
